--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,104 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* html {
+  scroll-behavior: smooth;
+} */
+
+/* width */
+::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f100;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-400;
+  transition: 0.15s;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-500;
+}
+
+html {
+  @apply scroll-smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply font-sans;
+  @apply text-gray-500;
+  @apply bg-gray-50;
+}
+
+h1 {
+  @apply text-3xl;
+  @apply my-6;
+}
+
+h2 {
+  @apply text-2xl;
+  @apply my-6;
+}
+
+h3 {
+  @apply text-xl;
+  @apply my-6;
+}
+
+h4 {
+  @apply text-lg;
+  @apply my-6;
+}
+
+h5 {
+  @apply text-base;
+  @apply my-6;
+}
+
+p {
+  @apply my-4;
+  @apply text-justify;
+}
+
+ul {
+  /* @apply my-4; */
+}
+
+pre {
+  @apply my-4;
+  @apply p-4;
+  @apply bg-gray-800;
+  @apply text-white;
+  @apply rounded;
+}
+
+pre code {
+  @apply p-0;
+  @apply text-sm;
+}
+
+pre code code {
+  @apply bg-green-700;
+}
+
+code {
+  @apply bg-gray-200;
+  @apply px-1;
+  @apply py-1;
+  @apply rounded;
+  @apply text-sm;
+}
+
+a {
+  @apply text-blue-500;
+  @apply underline;
+  @apply hover:text-blue-600;
 }
